--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,9 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <meta name="fragment" content="!">
+    <base href="/">
+
     
     <!--  
         Stylesheets and Preprocessors
@@ -29,8 +32,10 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
     <!--STYLES END-->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'> 
   </head>
 
   <body>
@@ -60,7 +65,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
@@ -88,7 +93,11 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/min/production.min.js"></script>
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/angular.js"></script>
+    <script src="/js/app/app.js"></script>
+    <script src="/js/app/controllers.js"></script>
+    <script src="/js/release/angular-ui-router.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
