Work on styling homepage

--- a/.tmp/public/styles/importer.scss
+++ b/.tmp/public/styles/importer.scss
@@ -29,6 +29,8 @@
 //
 // etc.
 
+@import '../bower_components/normalize.css/normalize.css';
+@import '../bower_components/ionicons/scss/ionicons';
 @import 'global';
 @import 'nav';
 
