--- a/.tmp/public/styles/global.scss
+++ b/.tmp/public/styles/global.scss
@@ -1,3 +1,31 @@
+@import 'variables';
+
 body {
 	font-family: 'open sans', arial, sans-serif;
+}
+
+main {
+	overflow: hidden;
+	margin: 0 1em;
+}
+
+@media (min-width: $small-breakpoint) {
+	main {
+		margin: 0 auto;
+		width: ($small-breakpoint - 32px);
+	}
+}
+
+@media (min-width: $medium-breakpoint) {
+	main {
+		margin: 0 auto;
+		width: ($medium-breakpoint - 32px);
+	}
+}
+
+@media (min-width: $large-breakpoint) {
+	main {
+		margin: 0 auto;
+		width: ($large-breakpoint - 32px);
+	}
 }
