--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -29,6 +29,8 @@
 //
 // etc.
 
+@import '../bower_components/normalize.css/normalize.css';
+@import '../bower_components/ionicons/scss/ionicons';
 @import 'global';
 @import 'nav';
 
