--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,8 +1,10 @@
 <div ng-app="app">
-    <nav>
-        <a href="#" ui-sref="home">Home</a>
-        <a href="#" ui-sref="login">Login</a>
-        <a href="#" ui-sref="register">Register</a>
-    </nav>
-    <div ui-view></div>
+	<nav>
+		<section>
+			<a href="#" ui-sref-active="active" ui-sref="home"><span>Home</span></a>
+			<a href="#" ui-sref-active="active" ui-sref="login"><span>Login</span></a>
+			<a href="#" ui-sref-active="active" ui-sref="register"><span>Register</span></a>
+		</section>
+	</nav>
+	<main ui-view></main>
 </div>
