--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,8 +32,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'> 
   </head>
@@ -93,11 +92,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/angular.js"></script>
-    <script src="/js/app/app.js"></script>
-    <script src="/js/app/controllers.js"></script>
-    <script src="/js/release/angular-ui-router.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
