Get login and registration page working

--- a/.tmp/public/templates/login.html
+++ b/.tmp/public/templates/login.html
@@ -1,1 +1,15 @@
-login
+<section class="user-form">
+	<div class="avatar"></div>
+	<h1>Log in</h1>
+	<form class="form" ng-submit="login(credentials)">
+		<label ng-class="error.identifier ? 'error' : ''">
+			<input type="text" placeholder="Email" ng-model="credentials.identifier">
+			<p class="error" ng-bind="error.identifier"></p>
+		</label>
+		<label ng-class="error.password ? 'error' : ''">
+			<input type="password" placeholder="Password" ng-model="credentials.password">
+			<p class="error" ng-bind="error.password"></p>
+		</label>
+		<button type="submit">Log in</button>
+	</form>
+</section>
