--- a/assets/templates/register.html
+++ b/assets/templates/register.html
@@ -1,1 +1,15 @@
-register
+<section class="user-form">
+	<div class="avatar"></div>
+	<h1>Register</h1>
+	<form class="form" ng-submit="register(credentials)" novalidate>
+		<label ng-class="error.identifier ? 'error' : ''">
+			<input type="text" placeholder="Email" ng-model="credentials.identifier">
+			<p class="error" ng-bind="error.identifier"></p>
+		</label>
+		<label ng-class="error.password ? 'error' : ''">
+			<input type="password" placeholder="Password" ng-model="credentials.password">
+			<p class="error" ng-bind="error.password"></p>
+		</label>
+		<button type="submit">Register</button>
+	</form>
+</section>
