--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,7 +32,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
     <link href='\\fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'> 
   </head>
@@ -93,14 +93,7 @@
 
     <script src="/bower_components/validator-js/validator.min.js"></script>
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/angular.js"></script>
-    <script src="/js/app/app.js"></script>
-    <script src="/js/app/controllers.js"></script>
-    <script src="/js/app/services.js"></script>
-    <script src="/js/lodash.js"></script>
-    <script src="/js/release/angular-ui-router.js"></script>
-    <script src="/js/validator.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
