User types, security policies, dashboard, assignment page

--- a/.tmp/public/styles/importer.scss
+++ b/.tmp/public/styles/importer.scss
@@ -34,5 +34,8 @@
 @import 'global';
 @import 'nav';
 @import 'login';
-
+@import 'form';
+@import 'button';
+@import 'create-assignment';
+@import 'dashboard';
 
