--- a/.tmp/public/styles/importer.css
+++ b/.tmp/public/styles/importer.css
@@ -3128,12 +3128,59 @@ nav {
   border: 0;
   background: #6091ba;
   padding: 6px 12px;
-  color: #fff; }
+  color: #fff;
+  text-decoration: none; }
   .btn:hover {
     background: #84aac9; }
 
 .assignment {
   margin: 4em auto;
   max-width: 30em; }
+
+.dashboard {
+  background: #f5f5f5;
+  margin-top: 2em;
+  padding: 2em;
+  max-width: 660px; }
+  .dashboard h1 {
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 2;
+    margin-top: 0;
+    color: #2f506c; }
+  .dashboard .week {
+    margin-bottom: 3em; }
+  .dashboard .weekly-progress {
+    overflow: hidden;
+    margin-bottom: 2em; }
+    .dashboard .weekly-progress button {
+      display: block;
+      float: left;
+      width: 4em;
+      height: 1em;
+      border-radius: 0;
+      background: #ccc;
+      border: 1px solid #ccc;
+      border: 0;
+      margin-right: 2px; }
+      .dashboard .weekly-progress button:hover {
+        border: 1px solid #999; }
+  .dashboard .assignments .a {
+    overflow: hidden;
+    padding: 1em;
+    margin-left: 1em;
+    color: #333; }
+    .dashboard .assignments .a > div {
+      float: left; }
+    .dashboard .assignments .a > a {
+      display: block;
+      float: right; }
+    .dashboard .assignments .a .datetime {
+      margin-right: 1em;
+      min-width: 5.625em; }
+    .dashboard .assignments .a .time {
+      font-size: 12px; }
+  .dashboard .assignments .a:nth-child(odd) {
+    background: #ECECEC; }
 
 /*# sourceMappingURL=importer.css.map */
