--- a/assets/templates/dashboard.html
+++ b/assets/templates/dashboard.html
@@ -1,3 +1,18 @@
-<section>
-	dashboard
+<section class="dashboard">
+	<div class="week" ng-repeat="week in assignments">
+		<h1>{{ week.start | date : 'MMM. d'}} - {{ week.end | date : 'MMM. d'}}</h1>
+		<div class="weekly-progress">
+			<button ng-repeat="assignment in week.assignments"></button>
+		</div>
+		<div class="assignments">
+			<div class="a" ng-repeat="assignment in week.assignments">
+				<div class="datetime">
+					<div>{{ assignment.dueAt | date : 'EEEE'}}</div>
+					<div class="time">{{ assignment.dueAt | date : 'h:mm a'}}</div>
+				</div>
+				<div ng-bind="assignment.name"></div>
+				<a ui-sref="submit({id: assignment.id})" class="btn">Submit</a>
+			</div>
+		</div>
+	</div>
 </section>
