--- a/views/homepage/index.ejs
+++ b/views/homepage/index.ejs
@@ -4,7 +4,7 @@
 			<a href="#" ui-sref-active="active" ng-hide="loggedIn" ui-sref="login"><span>Login</span></a>
 			<a href="#" ui-sref-active="active" ng-hide="loggedIn" ui-sref="register"><span>Register</span></a>
 			<a href="#" ui-sref-active="active" ng-show="loggedIn" ui-sref="dashboard"><span>Dashboard</span></a>
-			<a href="#" ui-sref-active="active" ng-show="loggedIn" ui-sref="create-assignment"><span>Create Assignment</span></a>
+			<a href="#" ui-sref-active="active" ng-show="loggedIn && user.type == 2" ui-sref="create-assignment"><span>Create Assignment</span></a>
 			<a href="#" ng-show="loggedIn" ng-click="logout()"><span>Logout</span></a>
 		</section>
 	</nav>
