--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -31,6 +31,9 @@
 
 @import '../bower_components/normalize.css/normalize.css';
 @import '../bower_components/ionicons/scss/ionicons';
+@import '../bower_components/ngDialog/css/ngDialog.css';
+@import '../bower_components/ngDialog/css/ngDialog-theme-default.css';
+@import '../bower_components/ngDialog/css/ngDialog-theme-plain.css';
 @import 'global';
 @import 'nav';
 @import 'login';
