--- a/assets/templates/edit-assignment.html
+++ b/assets/templates/edit-assignment.html
@@ -3,5 +3,6 @@
 	<form class="form" ng-submit="edit(assignment)">
 		<div ng-include="'templates/partials/assignment-form.html'"></div>
 		<button type="submit" class="btn">Save Assignment</button>
+		<button type="button" class="btn" ng-click="verifyDelete()">Delete</button>
 	</form>
 </section>
