--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -98,6 +98,7 @@
     <script src="/js/app/app.js"></script>
     <script src="/js/app/controllers.js"></script>
     <script src="/js/app/services.js"></script>
+    <script src="/js/js/ngDialog.js"></script>
     <script src="/js/lodash.js"></script>
     <script src="/js/moment.js"></script>
     <script src="/js/release/angular-ui-router.js"></script>
