--- a/assets/templates/edit-assignment.html
+++ b/assets/templates/edit-assignment.html
@@ -2,7 +2,7 @@
 	<h1 ng-bind="assignment.name"></h1>
 	<form class="form" ng-submit="edit(assignment)">
 		<div ng-include="'templates/partials/assignment-form.html'"></div>
+		<button type="button" class="btn danger" ng-click="verifyDelete()">Delete</button>
 		<button type="submit" class="btn">Save Assignment</button>
-		<button type="button" class="btn" ng-click="verifyDelete()">Delete</button>
 	</form>
 </section>
