--- a/.tmp/public/templates/register.html
+++ b/.tmp/public/templates/register.html
@@ -3,6 +3,14 @@
 	<h1>Register</h1>
 	<form class="form" ng-submit="register(credentials)" novalidate>
 		<p class="error" ng-show="error.generic" ng-bind="error.generic"></p>
+		<label ng-class="error.firstName ? 'error' : ''">
+			<input type="text" placeholder="First Name" ng-model="credentials.firstName">
+			<p class="error" ng-bind="error.firstName"></p>
+		</label>
+		<label ng-class="error.lastName ? 'error' : ''">
+			<input type="text" placeholder="Last Name" ng-model="credentials.lastName">
+			<p class="error" ng-bind="error.lastName"></p>
+		</label>
 		<label ng-class="error.identifier ? 'error' : ''">
 			<input type="text" placeholder="Email" ng-model="credentials.identifier">
 			<p class="error" ng-bind="error.identifier"></p>
