--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -14,26 +14,10 @@
 
 	.week {
 		margin-bottom: 3em;
-	}
 
-	.weekly-progress {
-		overflow: hidden;
-		button {
-			display: block;
-			float: left;
-			width: 4em;
-			height: 1em;
-			border-radius: 0;
-			background: #ccc;
-			border: 1px solid #ccc;
-			border: 0;
-			margin-right: 2px;
-
-			&:hover {
-				border: 1px solid #999;
-			}
+		.status {
+			margin: 4px 8px 4px 0;
 		}
-		margin-bottom: 2em;
 	}
 
 	.assignments {
@@ -42,22 +26,40 @@
 			padding: 1em;
 			margin-left: 1em;
 			color: #333;
-			> div {
+			> div, > a {
 				float: left;
 			}
 
 			> a {
-				display: block;
+				text-decoration: none;
+				color: #333;
+			}
+
+			.buttons {
 				float: right;
+				a {
+					display: block;
+					float: left;
+					margin-left: 0.5em;
+				}
 			}
 
 			.datetime {
+				display: block;
 				margin-right: 1em;
 				min-width: 5.625em;
 			}
 
-			.time {
+			.time, .status {
 				font-size: 12px;
+			}
+
+			.status {
+				font-weight: normal;
+				width: 100%;
+				span {
+					font-weight: bold;
+				}
 			}
 		}
 
