--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -35,6 +35,7 @@
 @import '../bower_components/ngDialog/css/ngDialog-theme-default.css';
 @import '../bower_components/ngDialog/css/ngDialog-theme-plain.css';
 @import 'global';
+@import 'status';
 @import 'nav';
 @import 'login';
 @import 'form';
