--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,3 +1,10 @@
 $small-breakpoint: 768px;
 $medium-breakpoint: 992px;
 $large-breakpoint: 1200px;
+
+$primary: #428bca;
+$success: #5cb85c;
+$info: #5bc0de;
+$warn: #f0ad4e;
+$danger: #d2322d;
+$default: #aaaaaa;
