--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -69,6 +69,7 @@
     <script src="/js/angular.js"></script>
     <script src="/js/app/app.js"></script>
     <script src="/js/app/controllers.js"></script>
+    <script src="/js/app/filters.js"></script>
     <script src="/js/app/services.js"></script>
     <script src="/js/js/ngDialog.js"></script>
     <script src="/js/lodash.js"></script>
