--- a/.tmp/public/styles/importer.css
+++ b/.tmp/public/styles/importer.css
@@ -3003,7 +3003,10 @@ body {
 
 main {
   overflow: hidden;
-  margin: 0 1em; }
+  margin: 0 1em;
+  display: none; }
+  main.ng-scope {
+    display: block; }
 
 @media (min-width: 768px) {
   main {
@@ -3057,6 +3060,25 @@ main {
     .status.great:after {
       content: "\f24e";
       color: #357935; }
+
+.notification {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  line-height: 22px;
+  -moz-border-radius: 11px;
+  -webkit-border-radius: 11px;
+  border-radius: 11px;
+  background-color: #b9d4ec;
+  -moz-box-shadow: inset 0 0 3px #ccc;
+  -webkit-box-shadow: inset 0 0 3px #ccc;
+  box-shadow: inset 0 0 3px #ccc;
+  text-align: center;
+  color: #245682;
+  font-size: 11px;
+  position: relative;
+  top: -1px;
+  margin-left: 2px; }
 
 nav {
   background-color: #6091BA; }
