--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -14,6 +14,11 @@ body {
 main {
 	overflow: hidden;
 	margin: 0 1em;
+	display: none;
+
+	&.ng-scope {
+		display: block;
+	}
 }
 
 @media (min-width: $small-breakpoint) {
