--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -36,6 +36,7 @@
 @import '../bower_components/ngDialog/css/ngDialog-theme-plain.css';
 @import 'global';
 @import 'status';
+@import 'notification';
 @import 'nav';
 @import 'login';
 @import 'form';
