Fix bug where all files were being filtered out

--- a/assets/templates/assignment.html
+++ b/assets/templates/assignment.html
@@ -16,7 +16,7 @@
 				<div ng-bind="submission.createdAt"></div>
 				<div ng-show="submission.grade" ng-bind="submission.grade.score"></div>
 				<div ng-bind="submission.notes"></div>
-				<a ng-href="{{submission.location}}" ng-show="submission.location">Live Website</a>
+				<a ng-href="{{submission.location}}index.html" ng-show="submission.location">Live Website</a>
 			</div>
 		</div>
 	</div>
