--- a/views/homepage/index.ejs
+++ b/views/homepage/index.ejs
@@ -1,4 +1,4 @@
-<div ng-app="app">
+<div ng-app="app" ng-class="bodyClass">
 	<nav ng-controller="NavCtrl">
 		<section>
 			<a href="#" ui-sref-active="active" ng-hide="loggedIn" ui-sref="login"><span>Login</span></a>
@@ -6,17 +6,6 @@
 			<a href="#" ui-sref-active="active" ng-show="loggedIn" ui-sref="dashboard"><span>Dashboard</span></a>
 			<a href="#" ui-sref-active="active" ng-show="loggedIn && user.type == 2" ui-sref="create-assignment"><span>Create Assignment</span></a>
 			<a href="#" ng-show="loggedIn" ng-click="logout()"><span>Logout</span></a>
-		</section>
-		<section ng-show="grade && showGrade" class="grade-tools" ng-class="grade ? 'show' : ''">
-			<div>
-				<textarea></textarea>
-			</div>
-			<div>
-				<button class="btn">DOA</button>
-				<button class="btn">INCOMPLETE</button>
-				<button class="btn">GOOD</button>
-				<button class="btn">GREAET</button>
-			</div>
 		</section>
 	</nav>
 	<main ui-view></main>
