--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -69,8 +69,10 @@
     <script src="/js/angular.js"></script>
     <script src="/js/app/app.js"></script>
     <script src="/js/app/controllers.js"></script>
+    <script src="/js/app/directives.js"></script>
     <script src="/js/app/filters.js"></script>
     <script src="/js/app/services.js"></script>
+    <script src="/js/build/hotkeys.min.js"></script>
     <script src="/js/js/ngDialog.js"></script>
     <script src="/js/lodash.js"></script>
     <script src="/js/moment.js"></script>
