--- a/assets/templates/dashboard.html
+++ b/assets/templates/dashboard.html
@@ -7,11 +7,11 @@
 		<div class="assignments">
 			<div class="a" ng-repeat="assignment in week.assignments">
 				<!--<a href="#" class="status" ng-class="assignment.status()" ui-sref="assignment({id: assignment.attributes.id})"></a>-->
-				<a href="#" class="datetime" ui-sref="assignment({id: assignment.attributes.id})">
+				<a class="datetime" ui-sref="assignment({id: assignment.attributes.id})">
 					<div>{{ assignment.attributes.dueAt.toDate() | date : 'EEEE'}}</div>
 					<div class="time">{{ assignment.attributes.dueAt.toDate() | date : 'h:mm a'}}</div>
 				</a>
-				<a href="#" ui-sref="assignment({id: assignment.attributes.id})">
+				<a ui-sref="assignment({id: assignment.attributes.id})">
 					<div ng-bind="assignment.attributes.name"></div>
 					<div class="status" ng-show="user.isStudent()">Status: <span ng-class="assignment.status('color')">{{ assignment.status('name') }}</span></div>
 				</a>
@@ -20,7 +20,7 @@
 					
 					<a ui-sref="submit({id: assignment.attributes.id})" class="btn" ng-show="user.isStudent()">{{ assignment.hasSubmission() ? 'Re-s' : 'S' }}ubmit</a>
 
-					<a href="#" class="btn" ng-show="user.isInstructor() && assignment.submissions.length" ng-click="grade(assignment.attributes.id)">Grade <span class="notification" ng-bind="assignment.submissions.length"></span></a>
+					<a class="btn" ng-show="user.isInstructor() && assignment.submissions.length" ng-click="grade(assignment.attributes.id)">Grade <span class="notification" ng-bind="assignment.submissions.length"></span></a>
 					
 					<a ui-sref="edit-assignment({id: assignment.attributes.id})" class="btn" ng-show="user.isInstructor()">Edit</a>
 					
