--- a/assets/styles/grade.scss
+++ b/assets/styles/grade.scss
@@ -43,6 +43,10 @@
 			box-sizing: border-box;
 			margin: 0;
 			padding: 1em;
+
+			&.error {
+				border: 3px solid $danger;
+			}
 		}
 		float: left;
 		padding-right: 11em;
