--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -1,7 +1,7 @@
 <section class="user-form">
 	<div class="avatar"></div>
 	<h1>Log in</h1>
-	<form class="form" ng-submit="login(credentials)">
+	<!-- <form class="form" ng-submit="login(credentials)">
 		<p class="error" ng-show="error.generic" ng-bind="error.generic"></p>
 		<label ng-class="error.identifier ? 'error' : ''">
 			<input type="text" placeholder="Email" ng-model="credentials.identifier">
@@ -12,5 +12,6 @@
 			<p class="error" ng-bind="error.password"></p>
 		</label>
 		<button type="submit">Log in</button>
-	</form>
+	</form> -->
+	<a href="/auth/github" class="btn">Log in with GitHub</a>
 </section>
