--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -43,5 +43,7 @@
 @import 'button';
 @import 'create-assignment';
 @import 'dashboard';
+@import 'assignment';
 @import 'grade';
+@import 'submit';
 
