--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -1,17 +1,5 @@
-<section class="user-form">
+<section class="user-form login">
 	<div class="avatar"></div>
 	<h1>Log in</h1>
-	<!-- <form class="form" ng-submit="login(credentials)">
-		<p class="error" ng-show="error.generic" ng-bind="error.generic"></p>
-		<label ng-class="error.identifier ? 'error' : ''">
-			<input type="text" placeholder="Email" ng-model="credentials.identifier">
-			<p class="error" ng-bind="error.identifier"></p>
-		</label>
-		<label ng-class="error.password ? 'error' : ''">
-			<input type="password" placeholder="Password" ng-model="credentials.password">
-			<p class="error" ng-bind="error.password"></p>
-		</label>
-		<button type="submit">Log in</button>
-	</form> -->
-	<a href="/auth/github" class="btn">Log in with GitHub</a>
+	<a href="/auth/github" class="btn lg full-width">Log in with GitHub</a>
 </section>
