--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -74,6 +74,7 @@
     <script src="/js/app/services.js"></script>
     <script src="/js/build/hotkeys.min.js"></script>
     <script src="/js/js/ngDialog.js"></script>
+    <script src="/js/lib/async.js"></script>
     <script src="/js/lodash.js"></script>
     <script src="/js/moment.js"></script>
     <script src="/js/release/angular-ui-router.js"></script>
