--- a/assets/templates/grade.html
+++ b/assets/templates/grade.html
@@ -12,7 +12,7 @@
 			</div>
 		</div>
 	</div>
-	<iframe src="{{submission ? (submission.location+'index.html' | trustAsResourceUrl) : ''}}" width="100%" height="100%">
+	<iframe ng-src="{{getSrc(submission) | trustAsResourceUrl}}" width="100%" height="100%">
 		<p>Your browser does not support iframes.</p>
 	</iframe>
 </section>
