--- a/assets/templates/instructor/dashboard.html
+++ b/assets/templates/instructor/dashboard.html
@@ -1,28 +1,27 @@
 <section class="dashboard">
-	<div ng-hide="assignments.length" class="ng-hide">
+	<div ng-hide="assignments.length || loading" class="ng-hide">
 		There are no assignments right now. Come back later...
+	</div>
+	<div ng-hide="assignments.length || !loading" class="ng-hide loading">
+		Loading assignments...
 	</div>
 	<div class="week" ng-repeat="week in assignments">
 		<h1>{{ week.start.toDate() | date : 'MMM. d'}} - {{ week.end.toDate() | date : 'MMM. d'}}</h1>
 		<div class="assignments">
 			<div class="a" ng-repeat="assignment in week.assignments">
-				<!--<a href="#" class="status" ng-class="assignment.status()" ui-sref="assignment({id: assignment.attributes.id})"></a>-->
 				<a class="datetime" ui-sref="assignment({id: assignment.attributes.id})">
 					<div>{{ assignment.attributes.dueAt.toDate() | date : 'EEEE'}}</div>
 					<div class="time">{{ assignment.attributes.dueAt.toDate() | date : 'h:mm a'}}</div>
 				</a>
 				<a ui-sref="assignment({id: assignment.attributes.id})">
 					<div ng-bind="assignment.attributes.name"></div>
-					<div class="status" ng-show="user.isStudent()">Status: <span ng-class="assignment.status('color')">{{ assignment.status('name') }}</span></div>
 				</a>
 
 				<div class="buttons">
-					
-					<a ui-sref="submit({id: assignment.attributes.id})" class="btn" ng-show="user.isStudent()">{{ assignment.hasSubmission() ? 'Re-s' : 'S' }}ubmit</a>
 
-					<a class="btn" ng-show="user.isInstructor() && assignment.submissions.length" ng-click="grade(assignment.attributes.id)">Grade <span class="notification" ng-bind="assignment.submissions.length"></span></a>
+					<a class="btn" ng-show="assignment.submissions.length" ng-click="grade(assignment.attributes.id)">Grade <span class="notification" ng-bind="assignment.submissions.length"></span></a>
 					
-					<a ui-sref="edit-assignment({id: assignment.attributes.id})" class="btn" ng-show="user.isInstructor()">Edit</a>
+					<a ui-sref="edit-assignment({id: assignment.attributes.id})" class="btn">Edit</a>
 					
 					<a ng-href="{{ assignment.attributes.url }}" class="btn">
 						<div class="ion-link"></div>
