--- a/views/homepage/index.ejs
+++ b/views/homepage/index.ejs
@@ -3,7 +3,8 @@
 		<section>
 			<a ui-sref-active="active" ng-hide="loggedIn" ui-sref="login"><span>Login</span></a>
 			<a ui-sref-active="active" ng-hide="loggedIn" ui-sref="register"><span>Register</span></a>
-			<a ui-sref-active="active" ng-show="loggedIn" ui-sref="dashboard"><span>Dashboard</span></a>
+			<a ui-sref-active="active" ng-show="loggedIn && user.type == 1" ui-sref="student-dashboard"><span>Dashboard</span></a>
+			<a ui-sref-active="active" ng-show="loggedIn && user.type == 2" ui-sref="instructor-dashboard"><span>Dashboard</span></a>
 			<a ui-sref-active="active" ng-show="loggedIn && user.type == 2" ui-sref="create-assignment"><span>Create Assignment</span></a>
 			<a ng-show="loggedIn && user.type == 2" class="grade-form-link" ng-click="toggleGradeForm()"><span>Grade Form</span></a>
 			<a ng-show="loggedIn" ng-click="logout()" class="right"><span>Logout</span></a>
