Finish up instructor assignment page

--- a/assets/templates/instructor/assignment.html
+++ b/assets/templates/instructor/assignment.html
@@ -1,16 +1,37 @@
 <section class="view-assignment">
 	<p class="error" ng-show="error.generic" ng-bind="error.generic"></p>
 	<div ng-show="assignment">
-		<h1>{{ assignment.attributes.name }}</h1>
-		<div><a ng-href="{{ assignment.attributes.url }}">Instructions</a> | Due on: {{ assignment.attributes.dueAt.toDate() | date : 'fullDate' }}</div>
+		<h1>{{ assignment.name }}</h1>
+		<div><a ng-href="{{ assignment.url }}">Instructions</a> | Due on: {{ assignment.dueAt | date : 'fullDate' }}</div>
 		<div ng-show="assignment.distSubdir">
 			<div>Required Files:</div>
 			<ul>
-				<li>{{ assignment.attributes.distSubdir }}/index.html</li>
+				<li>{{ assignment.distSubdir }}/index.html</li>
 			</ul>
 		</div>
-		<h2>Submissions</h2>
-		<div ng-show="assignment.submissions.length">
+		<div ng-show="students.length">
+			<h2>Class Status</h2>
+			<div ng-repeat="student in students">
+				<div class="submission-row">
+					<div class="user">
+						<img ng-src="{{ student.avatar }}" class="avatar">
+						<div class="name" ng-bind="student.name"></div>
+					</div>
+					<div class="content">
+						<h4>
+							<span ng-class="student.assignment.status('color')">{{ student.assignment.status('name') }}</span>
+							<span ng-show="student.submissions.length"> | </span>
+							<a ng-show="student.submissions[0].url" ng-href="{{student.submissions[0].url}}">Submission Link</a>
+							<span ng-show="student.submissions[0].location"> | </span>
+							<a ng-href="{{student.submissions[0].location}}" ng-show="student.submissions[0].location">Live Link</a>
+						</h4>
+						<div ng-bind="student.submissions[0].notes"></div>
+						<div class="date">{{ student.submissions[0].createdAt | date : 'fullDate' }}</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- <div ng-show="assignment.submissions.length">
 			<div ng-repeat="submission in assignment.submissions">
 				<div class="submission-row">
 					<img ng-src="{{ submission.user.avatar }}" class="avatar">
@@ -29,6 +50,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </section>
