--- a/assets/templates/student/assignment.html
+++ b/assets/templates/student/assignment.html
@@ -18,9 +18,11 @@
 						<div class="name" ng-bind="submission.user.name"></div>
 					</div>
 					<div class="content">
-						<h4><a ng-href="{{submission.url}}">Submission Link</a>
-						<span ng-show="submission.location"> | </span>
-						<a ng-href="{{submission.location}}" ng-show="submission.location">Live Link</a></h4>
+						<h4>
+							<a ng-href="{{submission.url}}">Submission Link</a>
+							<span ng-show="submission.location"> | </span>
+							<a ng-href="{{submission.location}}" ng-show="submission.location">Live Link</a>
+						</h4>
 						<div ng-bind="submission.notes"></div>
 						<div class="date">{{ submission.createdAt | date : 'fullDate' }}</div>
 					</div>
