--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,8 +9,12 @@
 		<meta name="fragment" content="!">
 		<base href="/">
 
-		
-		<link rel="stylesheet" type="text/css" href="/css/importer.css">
+		<% if(process.env.NODE_ENV === 'production') { %>
+			<link rel="stylesheet" type="text/css" href="/css/production.css">
+		<% } else { %>
+			<%- blocks.styles %>
+			<link rel="stylesheet" type="text/css" href="/css/importer.css">
+		<% } %>
 		<link href='\\fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'> 
 	</head>
 
@@ -18,7 +22,7 @@
 		<%- body %>
 
 		<% if(process.env.NODE_ENV === 'production') { %>
-
+			<script type="text/javascript" src="/js/production.js"></script>
 		<% } else { %>
 			<%- blocks.scripts %>
 		<% } %>
